@@ -32,6 +32,7 @@ from bzrlib.trace import note
 from bzrlib.plugins.builddeb.errors import (
     MissingUpstreamTarball,
     PackageVersionNotPresent,
+    PerFileTimestampsNotSupported,
     PristineTarError,
     )
 from bzrlib.plugins.builddeb.import_dsc import DistributionBranch
@@ -84,8 +85,6 @@ class PristineTarSource(UpstreamSource):
             raise PackageVersionNotPresent(package, version, self)
         revid = db.revid_of_upstream_version_from_branch(version)
         rev = self.branch.repository.get_revision(revid)
-        if not db.has_pristine_tar_delta(rev):
-            raise PackageVersionNotPresent(package, version, self)
         note("Using pristine-tar to reconstruct the needed tarball.")
         format = db.pristine_tar_format(rev)
         target_filename = self._tarball_path(package, version,
@@ -93,6 +92,8 @@ class PristineTarSource(UpstreamSource):
         try:
             db.reconstruct_pristine_tar(revid, package, version, target_filename)
         except PristineTarError:
+            raise PackageVersionNotPresent(package, version, self)
+        except PerFileTimestampsNotSupported:
             raise PackageVersionNotPresent(package, version, self)
 
 
